Release Note: 1. Slider spacing 2. Slider position bug on first page load 3. Change update timer to Sept. 21, 2018 - 12:00AM

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,5 @@
 /*large screen*/
-@media only screen and (min-width: 1095) and (max-height: 624){
-	.groupshot
-}
+
 @media only screen and (min-width: 993px){
 	.col.s12.double-padding.force-center-align {
 		margin-top: -13px !important;
@@ -118,12 +116,37 @@
 		width: 68% !important;
 		margin: 0 auto;
 	}
+
+	.l-more{
+		margin-top: -25vh !important;
+	}
 	
 }
 /* medium only screen */
 @media only screen and (min-width: 601px) and (max-width: 992px) and (orientation: landscape){
 	.voting-page .top-section{
-		min-height: 530px !important;
+		min-height: 600px !important;
+	}
+}
+
+@media only screen and (max-width:992px) and (min-height: 800px){
+	.l-more {
+		margin-top: -10vh !important;
+	}
+}
+
+@media only screen and (min-width:768px) and (max-height: 1024px) and (orientation: portrait){
+	.l-more {
+		margin-top: -10vh !important;
+	}
+}
+
+@media only screen and and (min-width: 320px) and (max-width: 568) and (orientation: landscape){
+	.full-width.header {
+		margin-top: 0;
+	}
+	.l-more {
+		margin-top: -38% !important;
 	}
 }
 
@@ -197,7 +220,7 @@
 	}
 
 	.l-more{
-		margin-top: -10% !important;
+		margin-top: -20vh;
 	}
 
 	.voting-page .top-section {
@@ -210,7 +233,7 @@
 		min-height:470px;
 	}
 	.l-more {
-		margin-top: -30% !important;
+		margin-top: -20vh !important;
 	}
 	.shw {
 		width: 60%;
@@ -236,17 +259,9 @@
 		width: 100%;
 	}
 	.header{
-		/* margin-top: -20vh; */
+		margin-top: -9vh;
 	}
 
-	
-
-}
-
-@media only screen and (min-height: 480px) and(max-height: 560px) and (min-width: 481px) and (max-width: 992px){
-	.groupshot{
-		max-width: 300px !important;
-	}
 }
 
 /*special small screen // for the logo*/
@@ -277,11 +292,9 @@
 		background-size: 40% !important;
 		background-position: center top !important;
 	}
-}
 
-@media (max-height: 480px){
-	.header{
-		/* margin-top: -16vh */
+	.groupshot{
+		width: 90% !important;
 	}
 }
 
@@ -290,8 +303,31 @@
 	.submit.input-field {
 		margin-top: 0 !important;
 	}
+
 	.grid{
 		margin: 14px !important;
+	}
+
+	.groupshot{
+		max-width: 100%;
+		width: 90% !important;
+	}
+
+	.l-more {
+		margin-top: -24vh !important;
+	}
+
+	.header {
+		margin-top: -7vh;
+	}
+}
+
+@media only screen and (min-width : 375px) and (max-width : 667px) and (orientation: portrait) { 
+	.l-more {
+		margin-top: -17vh !important;
+	}
+	.header{
+		margin-top: -2vh;
 	}
 }
 
@@ -866,7 +902,7 @@ span.bar-prompt {
 
 @media only screen and (min-width: 420px) and (max-width: 992px) {
 	.full-width.header{
-		/* margin-top: -20vh; */
+		margin-top: -3vh;
 	}
 	.groupshot {
 		width: 45%;
@@ -882,7 +918,7 @@ span.bar-prompt {
 	}
 
 	.groupshot{
-		max-width: 60%;
+		/* max-width: 60%; */
 	}
 }
 
